@@ -1,3 +1,8 @@
+2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b21
+
+	* Change: get(Request|Get|Post|Files|Env|Server)Vars() functions.
+	  TODO - Add XSS filtering
+
 2004-07-14 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b20
 
 	* Change: Tweaked modules.php again.
